--- a/public/views/pages/fragments/edit.html
+++ b/public/views/pages/fragments/edit.html
@@ -1,135 +1,81 @@
 {% extends '../layouts/default.html' %}
 {% block content %}
-<link rel="stylesheet" type="text/css" href="/css/bootstrap-fileupload.min.css" />
-
-<div tt-controller="app/goods/index" tt-init="initEdit">
+<div tt-controller="app/modules/index" tt-init="initEdit">
     <!-- page heading start-->
     <div class="page-heading">
         <h3>
-        用户管理
+        内容管理
         </h3>
         <ul class="breadcrumb">
             <li>
-                <a href="#">用户管理</a>
+                <a href="#">新增模块</a>
             </li>
-            <li class="active"> 编辑用户 </li>
+            <li class="active"> 新增模块 </li>
         </ul>
     </div>
     <!-- page heading end-->
     <!--body wrapper start-->
-    <section class="wrapper">
+    <div class="wrapper">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <section class="panel">
                     <header class="panel-heading">
-                        编辑用户
+                        新增模块
+                        <span class="tools pull-right">
+                        <a class="fa fa-chevron-down" href="javascript:;"></a>
+                        <a class="fa fa-times" href="javascript:;"></a>
+                        </span>
                     </header>
                     <div class="panel-body">
-                        <form class="form-horizontal" role="form">
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-2 control-label">用户名</label>
-                                <div class="col-md-6">
-                                    <div class="iconic-input">
-                                        <i class="fa fa-user"></i>
-                                        <input type="text" class="form-control" placeholder="用户名" tt-model="user.username">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-2 control-label">邮箱</label>
-                                <div class="col-md-6">
-                                    <div class="iconic-input">
-                                        <i class="fa fa-home"></i>
-                                        <input type="text" class="form-control" placeholder="邮箱" tt-model="user.email">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-2 control-label">电话</label>
-                                <div class="col-md-6">
-                                    <div class="iconic-input">
-                                        <i class="fa fa-phone"></i>
-                                        <input type="text" class="form-control" placeholder="电话" tt-model="user.phone">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-2 control-label">昵称</label>
-                                <div class="col-md-6">
-                                    <div class="iconic-input">
-                                        <i class="fa fa-user"></i>
-                                        <input type="text" class="form-control" placeholder="昵称" tt-model="user.nickname">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-2 col-sm-2 control-label">角色</label>
-                                <div class="col-md-2">
-                                    <div class="flat-green">
-                                        <div class="radio ">
-                                            <input tabindex="1" type="radio"  name="角色" tt-model="user.role" value="2">
-                                            <label>普通用户 </label>
+                        <div class="form">
+                            <form class="form-horizontal">
+                                <div class="form-group">
+                                    <label class="col-md-2 col-sm-2 control-label">板块名称</label>
+                                    <div class="col-md-6">
+                                        <div class="iconic-input">
+                                            <i class="fa fa-book"></i>
+                                            <input type="text" class="form-control" placeholder="板块名称, 例如首页幻灯片，招聘模块" tt-model="module.name">
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-2">
-                                    <div class="flat-green">
-                                        <div class="radio ">
-                                            <input tabindex="2" type="radio"  name="角色"  tt-model="user.role" value="3">
-                                            <label>供应商 </label>
+                                <div class="form-group">
+                                    <label class="col-md-2 col-sm-2 control-label">板块类型</label>
+                                    <div class="col-md-6">
+                                        <div class="iconic-input">
+                                            <i class="fa fa-leaf"></i>
+                                            <input type="text" class="form-control" placeholder="板块类型, 板块的识别名字，用字母或者数字表示" tt-model="module.type">
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form-group last">
-                                <label class="control-label col-md-2">头像</label>
-                                <div class="col-md-6">
-                                    <div class="fileupload fileupload-new" data-provides="fileupload"><input type="hidden">
-                                    <div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
-                                        <img src="" tt-src="user.avatar" alt="">
-                                    </div>
-                                    <div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 10px;"></div>
-                                    <div>
-                                        <span class="btn btn-default btn-file">
-                                        <span class="fileupload-new"><i class="fa fa-paper-clip"></i> 选择图片...</span>
-                                        <span class="fileupload-exists"><i class="fa fa-undo"></i> 更改...</span>
-                                        <input type="file" class="default" tt-model="user.avatar">
-                                        </span>
-                                        <a href="#" class="btn btn-danger fileupload-exists" data-dismiss="fileupload"><i class="fa fa-trash"></i> 删除</a>
+                                <div class="form-group">
+                                    <label class="col-md-2 col-sm-2 control-label">显示/隐藏</label>
+                                    <div class="col-md-2">
+                                        <div class="iconic-input">
+                                            <input tabindex="1" type="checkbox"  name="显示" tt-model="module.is_show">
+                                            <label>显示 </label>
+                                        </div>
                                     </div>
                                 </div>
-                                <br>
-                                <span class="label label-warning">提示: 单张图片大小限制为2M</span>
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-2 control-label"></label>
+                                <div class="col-md-6">
+                                    <a class="btn btn-primary right" tt-click="updateModule">确定</a>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-2 col-sm-2 control-label"></label>
-                            <div class="col-md-6">
-                                <button class="btn btn-primary right" tt-click="updateUser">提交</button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </section>
         </div>
     </div>
-</section>
-<!--body wrapper end-->
-</div>
-<!--footer section start-->
-<!-- <script type="text/javascript" src="/lib/bootstrap-fileupload.min.js"></script> -->
-<script>
-    requirejs(['/js/common.js'], function (common) {
-        requirejs(['modernizr', 'jquery', 'bootstrap', 'iCheck', 'fileupload', 'app/users/index'],
-            function(modernizr, $, bootstrap, iCheck, fileUpload, userController){
-                // $(function(){
-                //     $('.flat-green input').iCheck({
-                //         checkboxClass: 'icheckbox_flat-green',
-                //         radioClass: 'iradio_flat-green'
-                //     });
-                // });
-                userController.initEdit();
+    <!--body wrapper end-->
+    <!--footer section start-->
+    <script>
+        requirejs(['/js/common.js'], function (common) {
+            requirejs(['modernizr','bootstrap', 'app/modules/index'], function(a, b, moduleController){
+                moduleController.initEdit();
+            });
         });
-    });
-</script>
+    </script>
+</div>
 {% endblock %}
