--- a/public/views/pages/suppliers/list.html
+++ b/public/views/pages/suppliers/list.html
@@ -2,11 +2,11 @@
 {% block content %}
 
 <!--dynamic table-->
-<link href="/js/lib/advanced-datatable/css/demo_page.css" rel="stylesheet" />
-<link href="/js/lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
-<link rel="stylesheet" href="/js/lib/data-tables/DT_bootstrap.css" />
+<link href="/lib/advanced-datatable/css/demo_page.css" rel="stylesheet" />
+<link href="/lib/advanced-datatable/css/demo_table.css" rel="stylesheet" />
+<link rel="stylesheet" href="/lib/data-tables/DT_bootstrap.css" />
 
-
+<div tt-controller="app/suppliers/index" tt-init="initList">
 <!-- page heading start-->
 <div class="page-heading">
     <h3>
@@ -40,7 +40,7 @@
                             </button>
                         </div>
                         <div class="btn-group pull-right">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">Tools <i class="fa fa-angle-down"></i>
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">更多 <i class="fa fa-angle-down"></i>
                             </button>
                             <ul class="dropdown-menu pull-right">
                                 <li><a href="#"> 打印 </a></li>
@@ -49,8 +49,44 @@
                             </ul>
                         </div>
                     </div>
+                    <table class="table  table-hover general-table" id="userList">
+                        <thead>
+                            <tr>
+                                <th> 名称</th>
+                                <th> 地址</th>
+                                <th> 营业范围</th>
+                                <th> 联系方式</th>
+                                <th> 规模</th>
+                                <th> 联系人</th>
+                                <th> 操作</th>
+                            </tr>
+                        </thead>
+                        <tbody tt-repeat="item in suppliers">
+                        {% raw %}
+                            <tr data-id="{{item.id}}">
+                                <td><a href="/suppliers/{{item.id}}">{{item.name}}</a></td>
+                                <td>{{item.location}}</td>
+                                <td><span class="label label-success label-mini">{{item.scope}}</span></td>
+                                <td>{{item.phone}} </td>
+                                <td>{{item.scale}}</td>
+                                <td>{{item.owner}}</td>
+                                <td>
+                                    <a href="/suppliers/{{item.id}}"><i class="fa fa-eye"></i></a>
+                                    <a href="/suppliers/{{item.id}}/edit"><i class="fa fa-edit"></i></a>
+                                    <a href="javascript:;" tt-click="deleteSupplier"><i class="fa fa-trash-o"></i></a>
+                                </td>
+                            </tr>  
+                        {% endraw %}
+                        </tbody>
+                    </table>
                     <hr>
-                    
+                    <div class="row-fluid">
+                        <div class="span6">
+                            <div class="dataTables_paginate paging_bootstrap pagination">
+                                <ul></ul>
+                            </div>
+                        </div>
+                    </div>
                     
                 </div>
             </section>
@@ -59,9 +95,12 @@
 </div>
 <!--body wrapper end-->
 <!--footer section start-->
-<!--dynamic table-->
-<!-- <script type="text/javascript" language="javascript" src="/js/lib/advanced-datatable/js/jquery.dataTables.js"></script>
-<script type="text/javascript" src="/js/lib/data-tables/DT_bootstrap.js"></script>
-<!--dynamic table initialization -->
-<!-- <script src="/js/lib/dynamic_table_init.js"></script> -->
+<script>
+    requirejs(['/js/common.js'], function (common) {
+        requirejs(['modernizr','bootstrap', 'app/suppliers/index'], function(a, b, supplierController){
+            supplierController.initList();
+        });
+    });
+</script>
+</div>
 {% endblock %}
