--- a/public/views/pages/users/edit.html
+++ b/public/views/pages/users/edit.html
@@ -84,7 +84,9 @@
                             <div class="form-group last">
                                 <label class="control-label col-md-2">头像</label>
                                 <div class="col-md-6">
-                                    <div class="fileupload fileupload-new" data-provides="fileupload"><input type="hidden">
+                                    <input id="avatar" name="avatar[]" type="file" multiple class="file-loading">    
+
+                                 <!--    <div class="fileupload fileupload-new" data-provides="fileupload"><input type="hidden">
                                     <div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
                                         <img src="" tt-src="user.avatar" alt="">
                                     </div>
@@ -96,7 +98,7 @@
                                         <input type="file" class="default" tt-model="user.avatar">
                                         </span>
                                         <a href="#" class="btn btn-danger fileupload-exists" data-dismiss="fileupload"><i class="fa fa-trash"></i> 删除</a>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <br>
                                 <span class="label label-warning">提示: 单张图片大小限制为2M</span>
@@ -105,7 +107,7 @@
                         <div class="form-group">
                             <label class="col-md-2 col-sm-2 control-label"></label>
                             <div class="col-md-6">
-                                <button class="btn btn-primary right" tt-click="updateUser">提交</button>
+                                <span class="btn btn-primary right" tt-click="updateUser">提交</span>
                             </div>
                         </div>
                     </form>
