--- a/public/views/pages/users/edit.html
+++ b/public/views/pages/users/edit.html
@@ -1,6 +1,8 @@
 {% extends '../layouts/default.html' %}
 {% block content %}
-<link rel="stylesheet" type="text/css" href="/css/bootstrap-fileupload.min.css" />
+<!-- <link rel="stylesheet" type="text/css" href="/css/bootstrap-fileupload.min.css" /> -->
+<link rel="stylesheet" type="text/css" href="/lib/bootstrap-fileinput/fileinput.css" />
+
 
 <div tt-controller="app/goods/index" tt-init="initEdit">
     <!-- page heading start-->
@@ -81,7 +83,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group last">
+                            <div class="form-group">
                                 <label class="control-label col-md-2">头像</label>
                                 <div class="col-md-6">
                                     <input id="avatar" name="avatar[]" type="file" multiple class="file-loading">    
@@ -100,16 +102,25 @@
                                         <a href="#" class="btn btn-danger fileupload-exists" data-dismiss="fileupload"><i class="fa fa-trash"></i> 删除</a>
                                     </div> -->
                                 </div>
-                                <br>
-                                <span class="label label-warning">提示: 单张图片大小限制为2M</span>
+                                <div class="col-md-8"> 
+                                    <div class="col-md-4"></div>
+                                    <span class="label label-warning error-tips">提示: 单张图片大小限制为2M</span>
+                                </div>
+                            </div>
+
+
+                            <div class="form-group">
+                                <input id="input-repl-2" name="files" type="file" class="file-loading" accept="image/*" multiple>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-2 col-sm-2 control-label"></label>
+                                <div class="col-md-6">
+                                    <span class="btn btn-primary right" tt-click="updateUser">提交</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-2 col-sm-2 control-label"></label>
-                            <div class="col-md-6">
-                                <span class="btn btn-primary right" tt-click="updateUser">提交</span>
-                            </div>
-                        </div>
+                        
                     </form>
                 </div>
             </section>
