--- a/public/views/pages/media/index.html
+++ b/public/views/pages/media/index.html
@@ -1,6 +1,8 @@
 {% extends '../layouts/default.html' %}
 {% block content %}
-<div tt-controller="app/users/index" tt-init="initList">
+<link rel="stylesheet" type="text/css" href="/lib/bootstrap-fileinput/fileinput.css" />
+
+<div tt-controller="app/media/index" tt-init="initList">
     <!-- page heading start-->
     <div class="page-heading">
         <h3>
@@ -32,87 +34,20 @@
                             <li><a href="#" data-filter=".images">图片</a></li>
                             <li><a href="#" data-filter=".audio">音频</a></li>
                             <li><a href="#" data-filter=".video">视频</a></li>
-                            <li><a href="#" data-filter=".documents">文件</a></li>
+                            <li><a href="#" data-filter=".docs">文件</a></li>
                         </ul>
                         <div class="btn-group pull-right">
                             <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-check-square-o"></i> 全选</button>
-                            <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-folder-open"></i> 添加</button>
                             <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-trash-o"></i> 删除</button>
-                            <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-upload"></i> 上传</button>
+                            <a href="#myModal" data-toggle="modal" type="button" class="btn btn-primary btn-sm"><i class="fa fa-upload"></i> 上传</a>
                         </div>
-                        <div id="gallery" class="media-gal isotope" style="position: relative; overflow: hidden; height: 755.016px;">
-                            <div class="images item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 0px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image1.jpg" alt="">
-                                </a>
-                                <p>img01.jpg </p>
-                            </div>
-                            <div class="audio item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(245px, 0px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image2.jpg" alt="">
-                                </a>
-                                <p>img02.jpg </p>
-                            </div>
-                            <div class="video item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(489px, 0px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image3.jpg" alt="">
-                                </a>
-                                <p>img03.jpg </p>
-                            </div>
-                            <div class="images audio item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(734px, 0px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image4.jpg" alt="">
-                                </a>
-                                <p>img04.jpg </p>
-                            </div>
-                            <div class="images documents item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 252px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image5.jpg" alt="">
-                                </a>
-                                <p>img05.jpg </p>
-                            </div>
-                            <div class="audio item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(245px, 252px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image1.jpg" alt="">
-                                </a>
-                                <p>img01.jpg </p>
-                            </div>
-                            <div class="documents item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(489px, 252px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image2.jpg" alt="">
-                                </a>
-                                <p>img02.jpg </p>
-                            </div>
-                            <div class="video item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(734px, 252px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image3.jpg" alt="">
-                                </a>
-                                <p>img03.jpg </p>
-                            </div>
-                            <div class="images item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(0px, 503px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image4.jpg" alt="">
-                                </a>
-                                <p>img04.jpg </p>
-                            </div>
-                            <div class="documents item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(245px, 503px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image5.jpg" alt="">
-                                </a>
-                                <p>img05.jpg </p>
-                            </div>
-                            <div class="video item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(489px, 503px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image1.jpg" alt="">
-                                </a>
-                                <p>img01.jpg </p>
-                            </div>
-                            <div class="audio images item  isotope-item" style="position: absolute; left: 0px; top: 0px; transform: translate3d(734px, 503px, 0px);">
-                                <a href="#myModal" data-toggle="modal">
-                                <img src="/images/gallery/image2.jpg" alt="">
-                                </a>
-                                <p>img02.jpg </p>
-                            </div>
+                        <div id="gallery" class="media-gal isotope" tt-repeat="item in media">
+                            {% raw%}
+                                <div class="{{item.type}} item  isotope-item">
+                                    <img src="{{item.preview}}" alt="{{item.name}}" data-path="{{item.path}}">
+                                    <p>{{item.name}} </p>
+                                </div>
+                            {% endraw%}   
                         </div>
                         <div class="col-md-12 text-center clearfix">
                             <ul class="pagination">
@@ -127,43 +62,15 @@
                         </div>
                         <!-- Modal -->
                         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
+                            <div class="modal-dialog" style="width: 1000px;">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        <h4 class="modal-title">Edit Media Gallery</h4>
+                                        <h4 class="modal-title">上传文件</h4>
                                     </div>
                                     <div class="modal-body row">
-                                        <div class="col-md-5 img-modal">
-                                            <img src="images/gallery/image1.jpg" alt="">
-                                            <a href="#" class="btn btn-white btn-sm"><i class="fa fa-pencil"></i> Edit Image</a>
-                                            <a href="#" class="btn btn-white btn-sm"><i class="fa fa-eye"></i> View Full Size</a>
-                                            <p class="mtop10"><strong>File Name:</strong> img01.jpg</p>
-                                            <p><strong>File Type:</strong> jpg</p>
-                                            <p><strong>Resolution:</strong> 300x200</p>
-                                            <p><strong>Uploaded By:</strong> <a href="#">ThemeBucket</a></p>
-                                        </div>
-                                        <div class="col-md-7">
-                                            <div class="form-group">
-                                                <label> Name</label>
-                                                <input id="name" value="img01.jpg" class="form-control">
-                                            </div>
-                                            <div class="form-group">
-                                                <label> Tittle Text</label>
-                                                <input id="title" value="awesome image" class="form-control">
-                                            </div>
-                                            <div class="form-group">
-                                                <label> Description</label>
-                                                <textarea rows="2" class="form-control"></textarea>
-                                            </div>
-                                            <div class="form-group">
-                                                <label> Link URL</label>
-                                                <input id="link" value="images/gallery/img01.jpg" class="form-control">
-                                            </div>
-                                            <div class="pull-right">
-                                                <button class="btn btn-danger btn-sm" type="button">Delete</button>
-                                                <button class="btn btn-success btn-sm" type="button">Save changes</button>
-                                            </div>
+                                        <div class="form-group">
+                                            <input id="input-repl-2" name="files" type="file" class="file-loading" multiple>
                                         </div>
                                     </div>
                                 </div>
@@ -180,8 +87,8 @@
 <!--footer section start-->
 <script>
     requirejs(['/js/common.js'], function (common) {
-        requirejs(['modernizr','bootstrap', 'isotope', 'app/users/index'], function(a, b, isotope, userController){
-            //userController.initList();
+        requirejs(['modernizr','bootstrap', 'isotope', 'app/media/index'], function(a, b, isotope, mediaController){
+            mediaController.initList();
             $(function() {
                 var $container = $('#gallery');
                 $container.isotope({
