增加用户头像上传功能

--- a/public/views/pages/media/index.html
+++ b/public/views/pages/media/index.html
@@ -50,15 +50,7 @@
                             {% endraw%}   
                         </div>
                         <div class="col-md-12 text-center clearfix">
-                            <ul class="pagination">
-                                <li><a href="#">«</a></li>
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li><a href="#">»</a></li>
-                            </ul>
+                            <ul class="pagination"></ul>
                         </div>
                         <!-- Modal -->
                         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
