--- a/public/views/pages/users/edit.html
+++ b/public/views/pages/users/edit.html
@@ -86,31 +86,8 @@
                             <div class="form-group">
                                 <label class="control-label col-md-2">头像</label>
                                 <div class="col-md-6">
-                                    <input id="avatar" name="avatar[]" type="file" multiple class="file-loading">    
-
-                                 <!--    <div class="fileupload fileupload-new" data-provides="fileupload"><input type="hidden">
-                                    <div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
-                                        <img src="" tt-src="user.avatar" alt="">
-                                    </div>
-                                    <div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 10px;"></div>
-                                    <div>
-                                        <span class="btn btn-default btn-file">
-                                        <span class="fileupload-new"><i class="fa fa-paper-clip"></i> 选择图片...</span>
-                                        <span class="fileupload-exists"><i class="fa fa-undo"></i> 更改...</span>
-                                        <input type="file" class="default" tt-model="user.avatar">
-                                        </span>
-                                        <a href="#" class="btn btn-danger fileupload-exists" data-dismiss="fileupload"><i class="fa fa-trash"></i> 删除</a>
-                                    </div> -->
+                                    <input id="avatar" name="files" type="file" multiple>    
                                 </div>
-                                <div class="col-md-8"> 
-                                    <div class="col-md-4"></div>
-                                    <span class="label label-warning error-tips">提示: 单张图片大小限制为2M</span>
-                                </div>
-                            </div>
-
-
-                            <div class="form-group">
-                                <input id="input-repl-2" name="files" type="file" class="file-loading" accept="image/*" multiple>
                             </div>
 
                             <div class="form-group">
@@ -119,7 +96,6 @@
                                     <span class="btn btn-primary right" tt-click="updateUser">提交</span>
                                 </div>
                             </div>
-                        </div>
                         
                     </form>
                 </div>
