增加用户头像编辑和查看功能

--- a/public/views/pages/users/edit.html
+++ b/public/views/pages/users/edit.html
@@ -2,6 +2,7 @@
 {% block content %}
 <!-- <link rel="stylesheet" type="text/css" href="/css/bootstrap-fileupload.min.css" /> -->
 <link rel="stylesheet" type="text/css" href="/lib/bootstrap-fileinput/fileinput.css" />
+<style>.file-thumbnail-footer {display: none;}</style>
 
 
 <div tt-controller="app/goods/index" tt-init="initEdit">
