--- a/public/views/pages/users/list.html
+++ b/public/views/pages/users/list.html
@@ -53,6 +53,7 @@
                         <thead>
                             <tr>
                                 <th> 名称</th>
+                                <th> 头像</th>
                                 <th> 手机</th>
                                 <th> 昵称</th>
                                 <th> 角色</th>
@@ -65,6 +66,7 @@
                         {% raw %}
                             <tr data-id="{{item.id}}">
                                 <td><a href="/users/{{item.id}}">{{item.username}}</a></td>
+                                 <td><img src="{{item.avatar}}" width="30px" height="30px" alt="{{item.username}}"></img></td>
                                 <td class="hidden-phone">{{item.phone}}</td>
                                 <td>{{item.email}} </td>
                                 <td><span class="label label-info label-mini">{% if item.role == 2 %}用户 {% else %} 供应商{% endif %}</span></td>
@@ -83,15 +85,7 @@
                     <div class="row-fluid">
                         <div class="span6">
                             <div class="dataTables_paginate paging_bootstrap pagination">
-                                <ul>
-                                    <li class="prev disabled"><a href="#">← 上一页</a></li>
-                                    <li class="active"><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li class="next"><a href="#">下一页 → </a></li>
-                                </ul>
+                                <ul></ul>
                             </div>
                         </div>
                     </div>
