增加侧边栏按钮状态控制

--- a/public/views/components/sideNav/index.html
+++ b/public/views/components/sideNav/index.html
@@ -25,40 +25,40 @@
             </ul>
         </div>
         <!--sidebar nav start-->
-        <ul class="nav nav-pills nav-stacked custom-nav">
-            <li class="active"><a href="/"><i class="fa fa-home"></i> <span>控制台</span></a></li>
-            <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>用户管理</span></a>
+        <ul class="nav nav-pills nav-stacked custom-nav" id="sideNav">
+            <li class="active" data-menu="main"><a href="/"><i class="fa fa-home"></i> <span>控制台</span></a></li>
+            <li class="menu-list" data-menu="user"><a href=""><i class="fa fa-laptop"></i> <span>用户管理</span></a>
                 <ul class="sub-menu-list">
-                    <li><a href="/users"> 用户列表</a></li>
+                    <li data-submenu="list"><a href="/users"> 用户列表</a></li>
                 </ul>
             </li>
-            <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>商品管理</span></a>
+            <li class="menu-list" data-menu="good"><a href=""><i class="fa fa-book"></i> <span>商品管理</span></a>
                 <ul class="sub-menu-list">
-                    <li><a href="/goods"> 商品列表</a></li>
-                    <li><a href="/goods/new"> 新增商品</a></li>
-                    <li><a href="/category"> 商品类目</a></li>
+                    <li data-submenu="list"><a href="/goods"> 商品列表</a></li>
+                    <li data-submenu="new"><a href="/goods/new"> 新增商品</a></li>
+                    <li data-submenu="cat"><a href="/category"> 商品类目</a></li>
                 </ul>
             </li>
-            <li class="menu-list"><a href=""><i class="fa fa-tasks"></i> <span>供应商管理</span></a>
+            <li class="menu-list" data-menu="supplier"><a href=""><i class="fa fa-tasks"></i> <span>供应商管理</span></a>
                 <ul class="sub-menu-list">
-                    <li><a href="/suppliers"> 供应商列表</a></li>
-                    <li><a href="/suppliers/new"> 新增供应商</a></li>
+                    <li data-submenu="list"><a href="/suppliers"> 供应商列表</a></li>
+                    <li data-submenu="new"><a href="/suppliers/new"> 新增供应商</a></li>
                 </ul>
             </li>
-            <li class="menu-list"><a href=""><i class="fa fa-bar-chart-o"></i> <span>订单管理</span></a>
+            <li class="menu-list" data-menu="order"><a href=""><i class="fa fa-bar-chart-o"></i> <span>订单管理</span></a>
                 <ul class="sub-menu-list">
-                    <li><a href="/orders"> 订单列表</a></li>
+                    <li data-submenu="list"><a href="/orders"> 订单列表</a></li>
                 </ul>
             </li>
-            <li class="menu-list"><a href="/modules"><i class="fa fa-file-text"></i> <span>内容管理</span></a>
+            <li class="menu-list"  data-menu="cms"><a href="/modules"><i class="fa fa-file-text"></i> <span>内容管理</span></a>
                 <ul class="sub-menu-list">
-                    <li><a href="/modules">模块管理</a></li>
-                    <li><a href="/modules/new">新增版块</a></li>
+                    <li data-submenu="list"><a href="/modules">模块管理</a></li>
+                    <li data-submenu="new"><a href="/modules/new">新增版块</a></li>
                 </ul>
             </li>
-            <li class="menu-list"><a href=""><i class="fa fa-camera"></i> <span>媒资管理</span></a>
+            <li class="menu-list" data-menu="media"><a href=""><i class="fa fa-camera"></i> <span>媒资管理</span></a>
                 <ul class="sub-menu-list">
-                    <li><a href="/media"> 图片库</a></li>
+                    <li data-submenu="lib"><a href="/media"> 图片库</a></li>
                 </ul>
             </li>
         </ul>
