--- a/public/views/pages/suppliers/list.html
+++ b/public/views/pages/suppliers/list.html
@@ -73,7 +73,7 @@
                                 <td>
                                     <a href="/suppliers/{{item.id}}"><i class="fa fa-eye"></i></a>
                                     <a href="/suppliers/{{item.id}}/edit"><i class="fa fa-edit"></i></a>
-                                    <a href="javascript:;" tt-click="deleteSupplier"><i class="fa fa-trash-o"></i></a>
+                                    <a href="javascript:;" tt-click="deleteSupplierDialog"><i class="fa fa-trash-o"></i></a>
                                 </td>
                             </tr>  
                         {% endraw %}
